# Flash_sfs

./: CMakeLists.txt  README.md  cppcheck_suppressions.txt  sdkconfig
.github/workflows/: gitci.yml
components/w25q64/: CMakeLists.txt  simple_file_system.c  simple_file_system.h
examples/: CMakeLists.txt  main.cpp
executables/: CMakeLists.txt  main.cpp
flash_mock/: CMakeLists.txt  flash_mock.c  flash_mock.h
main/: main.c
sfs/: CMakeLists.txt  simple_file_system.c  simple_file_system.h  tools.cpp
sfs/tools/: CMakeLists.txt  tools.h
test/: CMakeLists.txt  flash_mock_test.cpp  hello_test.cpp  sfs_test.cpp  sfs_wrapper.cpp  sfs_wrapper.h
